Fixed credits spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -170,7 +170,7 @@ input[type="number"] {
     margin: 1rem 0;
     position: absolute;
     bottom: 0;
-    top: 5rem;
+    top: 7rem;
     left: 4rem;
     height: 2rem;
     opacity: 0.6;
